--- a/.github/workflows/cifuzz.yml
+++ b/.github/workflows/cifuzz.yml
@@ -11,11 +11,11 @@ jobs:
       id: build
       uses: google/oss-fuzz/infra/cifuzz/actions/build_fuzzers@master
       with:
-        oss-fuzz-project-name: 'example'
+        oss-fuzz-project-name: 'XposedOrNot-API'
     - name: Run Fuzzers
       uses: google/oss-fuzz/infra/cifuzz/actions/run_fuzzers@master
       with:
-        oss-fuzz-project-name: 'example'
+        oss-fuzz-project-name: 'XposedOrNot-API'
         fuzz-seconds: 600
         output-sarif: true
     - name: Upload Crash
