♻️ refactor: Migrated application from Flask to FastAPI

--- a/requirements.txt
+++ b/requirements.txt
@@ -1,29 +1,42 @@
-blinker 
-bson 
+blinker
+bson
 cryptography
-domcheck 
+domcheck
 email_split
+email-validator
+fastapi>=0.68.0
 feedgen
-flask
-flask-cors
-flask_limiter 
-flask-wtf
-gcloud 
+feedgenerator
+gcloud
 geoip2
-google-cloud-datastore 
+google-cloud-datastore
+google-cloud-pubsub
 gunicorn
+itsdangerous
+jinja2
+lxml
 mailjet_rest
-openai 
-PySocks 
-python-dateutil 
-python-whois 
-requests 
+openai
+PySocks
+pydantic>=1.8.0
+python-dateutil
+python-multipart>=0.0.5
+python-whois
+requests
 simplejson
-urllib3 
-validate_email 
-validators 
+slowapi
+starlette>=0.14.0
+typing-extensions>=4.0.0
+urllib3
+uvicorn>=0.15.0
+validate_email
+validators
 whois
 pyyaml
 ua-parser
 user-agents
- 
+httpx
+ipaddress
+python-jose
+validate-email
+aiohttp
