🧹 chore: Updated requirements.txt

--- a/requirements.txt
+++ b/requirements.txt
@@ -1,9 +1,12 @@
+aiohttp
 blinker
 bson
 cryptography
+dnspython>=1.16.0
+dnstwist
 domcheck
-email_split
 email-validator
+email_split
 fastapi>=0.68.0
 feedgen
 feedgenerator
@@ -12,41 +15,37 @@ geoip2
 google-cloud-datastore
 google-cloud-pubsub
 gunicorn
+httpx
+idna>=2.8
+ipaddress
 itsdangerous
 jinja2
 lxml
 mailjet_rest
 openai
-PySocks
+ppdeep>=20200505
 pydantic>=1.8.0
 python-dateutil
+python-jose
 python-multipart>=0.0.5
 python-whois
+pyyaml
+PySocks
 redis>=4.5.0
 requests
 simplejson
 slowapi
 starlette>=0.14.0
+tld>=0.9.1
 typing-extensions>=4.0.0
-urllib3
-uvicorn>=0.15.0
-validate_email
-validators
-whois
-pyyaml
 ua-parser
 user-agents
-httpx
-ipaddress
-python-jose
+urllib3
+uvicorn>=0.15.0
 validate-email
-aiohttp
-dnstwist
-py-tlsh
-ssdeep
-geoip2>=4.0.0
-dnspython>=1.16.0
-ppdeep>=20200505
-py-tlsh>=4.5.0
-tld>=0.9.1
-idna>=2.8
+validators
+whois
+# py-tlsh
+# py-tlsh>=4.5.0
+# ssdeep
+
