🛡️ security: Add top-level permissions to CodeQL and Greetings workflows

--- a/.github/workflows/greetings.yml
+++ b/.github/workflows/greetings.yml
@@ -2,6 +2,9 @@ name: Friendly Greetings
 
 on: [pull_request_target, issues]
 
+permissions:
+  contents: read
+
 jobs:
   warm-welcome:
     runs-on: ubuntu-latest
