--- a/.github/workflows/black.yml
+++ b/.github/workflows/black.yml
@@ -9,5 +9,5 @@ jobs:
   lint:
     runs-on: ubuntu-latest
     steps:
-      - uses: actions/checkout@v3
+      - uses: actions/checkout@11bd71901bbe5b1630ceea73d27597364c9af683  # v4.2.2
       - uses: psf/black@stable
