--- a/.github/workflows/black.yml
+++ b/.github/workflows/black.yml
@@ -10,4 +10,4 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@11bd71901bbe5b1630ceea73d27597364c9af683  # v4.2.2
-      - uses: psf/black@stable
+      - uses: psf/black@af0ba72a73598c76189d6dd1b21d8532255d5942  # 25.9.0
