--- a/.github/workflows/pylint.yml
+++ b/.github/workflows/pylint.yml
@@ -21,12 +21,12 @@ jobs:
 
     - name: Install dependencies
       run: |
-        python -m pip install --upgrade pip
+        python -m pip install pip==24.3.1
         pip install -r requirements.txt
 
     - name: Install Pylint
       run: |
-        pip install pylint
+        pip install pylint==3.3.1
 
     - name: Run Pylint
       run: |
