--- a/.github/workflows/pylint.yml
+++ b/.github/workflows/pylint.yml
@@ -21,12 +21,12 @@ jobs:
 
     - name: Install dependencies
       run: |
-        python -m pip install pip==25.3
+        python -m pip install --upgrade pip
         pip install -r requirements.txt
 
     - name: Install Pylint
       run: |
-        pip install pylint==3.2.7
+        pip install pylint
 
     - name: Run Pylint
       run: |
