--- a/.github/workflows/fuzzing.yml
+++ b/.github/workflows/fuzzing.yml
@@ -29,9 +29,9 @@ jobs:
         run: |
           python -m pip install --upgrade pip
           pip install pytest hypothesis
-          pip install -r requirements.txt || true
+          pip install -r requirements.txt || echo "Some dependencies may not install in CI - continuing"
 
       - name: Run fuzzing tests
         run: |
-          pytest tests/ -v --tb=short -m fuzz || pytest tests/ -v --tb=short
+          pytest tests/ -v --tb=short
         continue-on-error: false
