--- a/.github/workflows/fuzzing.yml
+++ b/.github/workflows/fuzzing.yml
@@ -35,8 +35,8 @@ jobs:
 
       - name: Install dependencies
         run: |
-          python -m pip install --upgrade pip
-          pip install atheris
+          python -m pip install pip==24.3.1
+          pip install atheris==2.3.0
           # Install only minimal dependencies needed for fuzz targets
           pip install -r requirements.txt || echo "Some dependencies may not install in CI - continuing"
 
@@ -55,7 +55,7 @@ jobs:
 
       - name: Upload crash artifacts
         if: failure()
-        uses: actions/upload-artifact@v4
+        uses: actions/upload-artifact@ea165f8d65b6e75b540449e92b4886f43607fa02  # v4.6.2
         with:
           name: fuzz-crashes-${{ matrix.fuzz-target }}
           path: |
