--- a/.github/workflows/pylint.yml
+++ b/.github/workflows/pylint.yml
@@ -21,12 +21,12 @@ jobs:
 
     - name: Install dependencies
       run: |
-        python -m pip install --upgrade pip==24.3.1
+        python -m pip install --upgrade pip==25.0.1
         pip install -r requirements.txt
 
     - name: Install Pylint
       run: |
-        pip install -r .github/requirements-pylint.txt
+        pip install --require-hashes -r .github/requirements-pylint.txt
 
     - name: Run Pylint
       run: |
