--- a/.github/workflows/fuzzing.yml
+++ b/.github/workflows/fuzzing.yml
@@ -35,10 +35,10 @@ jobs:
 
       - name: Install dependencies
         run: |
-          python -m pip install --upgrade pip==25.0.1
+          python -m pip install --require-hashes -r .github/requirements-pip.txt
           pip install --require-hashes -r .github/requirements-fuzz.txt
           # Install only minimal dependencies needed for fuzz targets
-          pip install -r requirements.txt || echo "Some dependencies may not install in CI - continuing"
+          pip install --require-hashes -r requirements-hashed.txt || echo "Some dependencies may not install in CI - continuing"
 
       - name: Run fuzzing - ${{ matrix.fuzz-target }}
         run: |
