--- a/.github/workflows/pylint.yml
+++ b/.github/workflows/pylint.yml
@@ -22,7 +22,7 @@ jobs:
     - name: Install dependencies
       run: |
         python -m pip install --require-hashes -r .github/requirements-pip.txt
-        pip install --require-hashes -r requirements-hashed.txt
+        pip install -r requirements.txt
 
     - name: Install Pylint
       run: |
