🔧 chore: Add administration read permission for Scorecard branch protection check

--- a/.github/workflows/scorecard.yml
+++ b/.github/workflows/scorecard.yml
@@ -15,6 +15,8 @@ jobs:
     name: Scorecard analysis
     runs-on: ubuntu-latest
     permissions:
+      contents: read
+      administration: read
       security-events: write
       id-token: write
 
